--- a/functions/graphql/package.json
+++ b/functions/graphql/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server-lambda": "^2.19.2",
+    "dotenv": "^8.2.0",
+    "faunadb": "^4.0.3",
     "graphql": "^15.5.0"
   }
 }
