--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -13,6 +13,7 @@
     "apollo-link-context": "^1.0.20",
     "gatsby": "^2.19.12",
     "gatsby-plugin-create-client-paths": "^2.1.22",
+    "gatsby-plugin-netlify": "^2.11.0",
     "netlify-identity-widget": "^1.5.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
