--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -14,8 +14,9 @@
     "gatsby": "^2.19.12",
     "gatsby-plugin-create-client-paths": "^2.1.22",
     "gatsby-plugin-netlify": "^2.11.0",
-    "netlify-identity-widget": "^1.5.6",
     "react": "^16.12.0",
+    "faunadb": "^2.11.1",
+    "netlify-identity-widget": "^1.5.6",
     "react-dom": "^16.12.0",
     "theme-ui": "^0.3.1"
   }
